--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
+
         <img class="logo" src="./imges/logo.png">
         <ul>
             <li><a href="#">ホームへ戻る</a></li>
@@ -17,31 +20,39 @@
         </ul>
     </header>
     <main>
-        <img class="logo" src="./imges/image.jpg">
-        <h1>プログラミングを学習して副業をしてみよう！！</h1>
-        <p>皆さんは副業の経験がありますか？プログラミン画は<a href="#">おすすめの副業ランキング</a>でもかなり人気が高いですね</p>
-        <p>--------</p>
-        <p>--中略--</p>
-        <p>--------</p>
-        <h2>
-            仕事する場所が選べる
-        </h2>
-        <p>--------</p>
-        <p>--中略--</p>
-        <p>--------</p>
-        <h2>
-            高単価な仕事を狙える
-        </h2>
-        <p>--------</p>
-        <p>--中略--</p>
-        <p>--------</p>
-        <h2>
-            需要が高い
-        </h2>
-        <p>--------</p>
-        <p>--中略--</p>
-        <p>--------</p>
-        <hr>
+        <article>
+            <img class="logo" src="./imges/image.jpg">
+            <h2>プログラミングを学習して副業をしてみよう！！</h2>
+            <p>皆さんは副業の経験がありますか？プログラミン画は<a href="#">おすすめの副業ランキング</a>でもかなり人気が高いですね</p>
+            <p>--------</p>
+            <p>--中略--</p>
+            <p>--------</p>
+            <section>
+                <h3>
+                    仕事する場所が選べる
+                </h3>
+                <p>--------</p>
+                <p>--中略--</p>
+                <p>--------</p>
+            </section>
+            <section>
+                <h3>
+                    高単価な仕事を狙える
+                </h3>
+                <p>--------</p>
+                <p>--中略--</p>
+                <p>--------</p>
+            </section>
+            <section>
+                <h3>
+                    需要が高い
+                </h3>
+                <p>--------</p>
+                <p>--中略--</p>
+                <p>--------</p>
+                <hr>
+            </section>
+        </article>
     </main>
     <footer>
         <h3>
@@ -63,4 +74,5 @@
         <small>copyright &copy; 2019 manaberuit. All rights reserved</small>
     </footer>
 </body>
+
 </html>
